fixup! distribution/snappy: Rename misc fileset to be more semantically correct
Signed-off-by: 林博仁(Buo-Ren Lin) <Buo.Ren.Lin@gmail.com>

--- a/distribution/snappy/snap/snapcraft.yaml
+++ b/distribution/snappy/snap/snapcraft.yaml
@@ -67,7 +67,7 @@ parts:
     stage:
       - $executables
       - $manpages
-      - $documentation
+      - $miscellaneous-files
     stage-packages:
       - bash
       - dosfstools
@@ -81,5 +81,5 @@ parts:
     prime:
       - $executables
       - $manpages
-      - $documentation
+      - $miscellaneous-files
     build-attributes: [debug]
