distribution/snappy: stage and prime desktop entry
Snapcraft require the desktop entry in prime.

Signed-off-by: 林博仁(Buo-Ren Lin) <Buo.Ren.Lin@gmail.com>

--- a/distribution/snappy/snap/snapcraft.yaml
+++ b/distribution/snappy/snap/snapcraft.yaml
@@ -66,6 +66,7 @@ parts:
       miscellaneous-files: [share/woeusb/*]
     stage:
       - $executables
+      - $freedesktop-desktop-entry
       - $manpages
       - $miscellaneous-files
     stage-packages:
@@ -80,6 +81,7 @@ parts:
       - wget
     prime:
       - $executables
+      - $freedesktop-desktop-entry
       - $manpages
       - $miscellaneous-files
     build-attributes: [debug]
