Add Turkish Language

--- a/src/linux-menu/woeusbgui.desktop
+++ b/src/linux-menu/woeusbgui.desktop
@@ -11,6 +11,8 @@ StartupNotify=true
 Name=WoeUSB
 Name[fr_FR]=WoeUSB
 Name[zh_TW]=WoeUSB Windows 可開機 USB 製作工具
+Name[tr_TR]=WoeUSB
 Comment=Create Windows USB stick installer from a real Windows DVD or an image.
 Comment[fr_FR]=Créer des clés USB d'installation de Windows depuis une image CD ou un dvd original.
 Comment[zh_TW]=從一個既有的 Windows DVD 或光碟映像檔建立 Windows 可開機 USB 安裝碟
+Comment[tr_TR]=Gerçek bir Windows DVD'sinden veya bir görüntüden Windows USB bellek yükleyicisi oluşturun.
