--- a/src/locale/tr/LC_MESSAGES/Makefile.am
+++ b/src/locale/tr/LC_MESSAGES/Makefile.am
@@ -1,4 +1,4 @@
-# Il faut mettre les fichiers dans le sous dossier locale/zh_TW/LC_MESSAGES de share...
+# Il faut mettre les fichiers dans le sous dossier locale/tr/LC_MESSAGES de share...
 pkgdatadir=$(mypkgdatadir)/locale/tr/LC_MESSAGES
 
 %.mo: %.po
